# BCR2000_Master

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  appveyor.yml  ideas.txt
.github/workflows/: builds-ubuntu.yml  builds-windows.yml
BCRMaster/: BCLEditor.cpp  BCLEditor.h  CMakeLists.txt  Main.cpp  MainComponent.cpp  MainComponent.h  setup.iss
